--- a/frontend/src/pages/login.astro
+++ b/frontend/src/pages/login.astro
@@ -44,6 +44,13 @@ import Layout from "../layouts/Layout.astro";
         >
           Iniciar Sesión
         </button>
+
+
+        <p class="text-center text-sm text-gray-600">
+        ¿No tienes cuenta? 
+        <a href="signup" class="font-medium text-teal-600 hover:text-teal-700">Regístrate aquí</a>
+      </p>
+
       </form>
     </div>
   </main>
