--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -11,11 +11,11 @@ import Layout from "../layouts/Layout.astro";
           <h1 class="text-6xl md:text-7xl lg:text-8xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-teal-600 to-emerald-500 mb-4 leading-tight">
             SyncSpend<span class="text-emerald-400">.</span>
           </h1>
-          <p class="text-lg text-teal-800 font-medium">Control inteligente para pequeñas empresas</p>
         </div>
 
         <p class="text-1rem text-gray-700 leading-relaxed md:leading-loose">
-          En la economía volátil de Venezuela, cada bolívar cuenta. <span class="font-semibold text-teal-600">SyncSpend</span> te ofrece el control total de tus finanzas empresariales: monitoreo multi-moneda, análisis inteligente de gastos y reportes automatizados para tomar decisiones con confianza.
+          <span class="font-bold text-xl text-teal-600">En la economía volátil de Venezuela, cada bolívar cuenta.</span> <br>
+          <span class="font-semibold text-teal-600">SyncSpend</span> te ofrece el control total de tus finanzas empresariales: monitoreo multi-moneda, análisis inteligente de gastos y reportes automatizados para tomar decisiones con confianza.
         </p>
 
         <div class="flex flex-col sm:flex-row gap-4 pt-2">
