--- a/frontend/src/features/transactions/TransactionsList.astro
+++ b/frontend/src/features/transactions/TransactionsList.astro
@@ -205,6 +205,7 @@ import { Icon } from 'astro-icon/components';
         const editIcon = editBtn.children[0];
 
         if (descriptionInput.hasAttribute('readonly')) {
+            // Modo editar
             descriptionInput.removeAttribute('readonly');
             dateInput.removeAttribute('readonly');
             amountInput.removeAttribute('readonly');
