--- a/apps/frontend/src/features/transactions/TransactionsList.astro
+++ b/apps/frontend/src/features/transactions/TransactionsList.astro
@@ -92,34 +92,35 @@ import { Icon } from 'astro-icon/components';
 
         <!-- listado Transacciones para mobile -->
         <div id="transaction-list-body-cards" class="grid grid-cols-1 gap-4 md:hidden">
-                        <div>
-                            <div class="font-bold text-lg text-gray-900" data-field="description"></div>
-                            <div class="text-sm text-gray-500" data-field="date"></div>
-                        </div>
-                        <div class="flex-shrink-0">
-                            <span class="px-2 py-1 inline-flex text-xs leading-5 font-semibold rounded-full" data-field="amount-container">
-                                <span data-field="amount"></span>
-                            </span>
-                        </div>
-                    </div>
-                    <div class="mt-2 text-sm text-gray-500">
-                        <span class="font-medium">Tipo:</span>
-                        <span data-field="type"></span>
-                    </div>
-                    <div class="mt-1 text-sm text-gray-500">
-                        <span class="font-medium">Cuenta:</span>
-                        <span data-field="accountName"></span>
-                    </div>
-                    <div class="mt-4 flex justify-end gap-2">
-                        <button class="edit-btn w-8 h-8 flex justify-center items-center text-gray-600 hover:text-teal-700">
-                            <Icon name="mdi:pencil-circle" class="w-6 h-6" is:inline/>
-                            <Icon name="mdi:pencil" class="w-6 h-6 hidden" is:inline/>
-                        </button>
-                        <button class="delete-btn w-8 h-8 flex justify-center items-center text-gray-600 hover:text-red-600">
-                            <Icon name="mdi:trash-can-outline" class="w-6 h-6" is:inline/>
-                        </button>
-                    </div>
-                </div>
+            <template id="transaction-item-template-card">
+            <div>
+                <div class="font-bold text-lg text-gray-900" data-field="description"></div>
+                <div class="text-sm text-gray-500" data-field="date"></div>
+            </div>
+            <div class="flex-shrink-0">
+                <span class="px-2 py-1 inline-flex text-xs leading-5 font-semibold rounded-full" data-field="amount-container">
+                    <span data-field="amount"></span>
+                </span>
+            </div>
+            </div>
+            <div class="mt-2 text-sm text-gray-500">
+                <span class="font-medium">Tipo:</span>
+                <span data-field="type"></span>
+            </div>
+            <div class="mt-1 text-sm text-gray-500">
+                <span class="font-medium">Cuenta:</span>
+                <span data-field="accountName"></span>
+            </div>
+            <div class="mt-4 flex justify-end gap-2">
+                <button class="edit-btn w-8 h-8 flex justify-center items-center text-gray-600 hover:text-teal-700">
+                    <Icon name="mdi:pencil-circle" class="w-6 h-6" is:inline/>
+                    <Icon name="mdi:pencil" class="w-6 h-6 hidden" is:inline/>
+                </button>
+                <button class="delete-btn w-8 h-8 flex justify-center items-center text-gray-600 hover:text-red-600">
+                    <Icon name="mdi:trash-can-outline" class="w-6 h-6" is:inline/>
+                </button>
+            </div>
+            </div>
             </template>
         </div>
     </div>
